--- a/index.html
+++ b/index.html
@@ -6,10 +6,116 @@
     <meta name="author" content="Eduardo Barona">
     <meta name="description" content="A Pokedex with html, css and javaScript">
     <title>Pokedex</title>
+    <link rel="icon" href="./images/icon.png">
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./javaScript/main.js" defer></script>
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="header__nav">
+            <img src="./images/logo.png" alt="Logo Pokedex" class="header__nav-image">
+            <ul class="header__nav-list">
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header" id="Show All">
+                        Show All
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header normal" id="normal">
+                        Normal
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header fire" id="fire">
+                        Fire
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header water" id="water">
+                        Water
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header grass" id="grass">
+                        Grass
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header electric" id="electric">
+                        Electric
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header ice" id="ice">
+                        Ice
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header fighting" id="fighting">
+                        Fighting
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header poison" id="poison">
+                        Poison
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header ground" id="ground">
+                        Ground
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header flying" id="flying">
+                        Flying
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header psychic" id="psychic">
+                        Psychic
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header bug" id="bug">
+                        Bug
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header rock" id="rock">
+                        Rock
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header ghost" id="ghost">
+                        Ghost
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header dark" id="dark">
+                        Dark
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header dragon" id="dragon">
+                        Dragon
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header steel" id="steel">
+                        Steel
+                    </button>
+                </li>
+                <li class="header__nav-list-item">
+                    <button class=" header__nav-list-button btn btn-header fairy" id="fairy">
+                        Fairy
+                    </button>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+        
+    </main>
 </body>
 </html>
