--- a/index.html
+++ b/index.html
@@ -114,8 +114,92 @@
         </nav>
     </header>
     <main>
-
         
+        <div id="all">
+            <div class="allPokemons" id="pokemonList">
+                <div class="pokemon">
+                    <p class="pokemonIdBack">#025</p>
+                    <div class="pokemonImage">
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu">
+                    </div>
+                    <div class="pokemonInfo">
+                        <div class="nameContainer">
+                            <p class="pokemonId">#025</p>
+                            <h2 class="pokemonName">Pikachu</h2>
+                        </div>
+                        <div class="pokemonType">
+                            <p class="electric type">ELECTRIC</p>
+                            <p class="fighting type">FIGHTING</p>
+                        </div>
+                        <div class="pokemonStats">
+                            <p class="pokemonStat">4m</p>
+                            <p class="pokemonStat">60kg</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="pokemon">
+                    <p class="pokemonIdBack">#025</p>
+                    <div class="pokemonImage">
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu">
+                    </div>
+                    <div class="pokemonInfo">
+                        <div class="nameContainer">
+                            <p class="pokemonId">#025</p>
+                            <h2 class="pokemonName">Pikachu</h2>
+                        </div>
+                        <div class="pokemonType">
+                            <p class="electric type">ELECTRIC</p>
+                            <p class="fighting type">FIGHTING</p>
+                        </div>
+                        <div class="pokemonStats">
+                            <p class="pokemonStat">4m</p>
+                            <p class="pokemonStat">60kg</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="pokemon">
+                    <p class="pokemonIdBack">#025</p>
+                    <div class="pokemonImage">
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu">
+                    </div>
+                    <div class="pokemonInfo">
+                        <div class="nameContainer">
+                            <p class="pokemonId">#025</p>
+                            <h2 class="pokemonName">Pikachu</h2>
+                        </div>
+                        <div class="pokemonType">
+                            <p class="electric type">ELECTRIC</p>
+                            <p class="fighting type">FIGHTING</p>
+                        </div>
+                        <div class="pokemonStats">
+                            <p class="pokemonStat">4m</p>
+                            <p class="pokemonStat">60kg</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="pokemon">
+                    <p class="pokemonIdBack">#025</p>
+                    <div class="pokemonImage">
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu">
+                    </div>
+                    <div class="pokemonInfo">
+                        <div class="nameContainer">
+                            <p class="pokemonId">#025</p>
+                            <h2 class="pokemonName">Pikachu</h2>
+                        </div>
+                        <div class="pokemonType">
+                            <p class="electric type">ELECTRIC</p>
+                            <p class="fighting type">FIGHTING</p>
+                        </div>
+                        <div class="pokemonStats">
+                            <p class="pokemonStat">4m</p>
+                            <p class="pokemonStat">60kg</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 </body>
 </html>
