Project Done and fix the problems with the API

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="./images/logo.png" alt="Logo Pokedex" class="header__nav-image">
             <ul class="header__nav-list">
                 <li class="header__nav-list-item">
-                    <button class=" header__nav-list-button btn btn-header" id="Show All">
+                    <button class=" header__nav-list-button btn btn-header" id="showAll">
                         Show All
                     </button>
                 </li>
@@ -117,8 +117,7 @@
         
         <div id="all">
             <div class="allPokemons" id="pokemonList">
-                <div class="pokemon">
-                    <p class="pokemonIdBack">#025</p>
+                    <!--<p class="pokemonIdBack">#025</p>
                     <div class="pokemonImage">
                         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu">
                     </div>
@@ -135,71 +134,9 @@
                             <p class="pokemonStat">4m</p>
                             <p class="pokemonStat">60kg</p>
                         </div>
-                    </div>
-                </div>
-                <div class="pokemon">
-                    <p class="pokemonIdBack">#025</p>
-                    <div class="pokemonImage">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu">
-                    </div>
-                    <div class="pokemonInfo">
-                        <div class="nameContainer">
-                            <p class="pokemonId">#025</p>
-                            <h2 class="pokemonName">Pikachu</h2>
-                        </div>
-                        <div class="pokemonType">
-                            <p class="electric type">ELECTRIC</p>
-                            <p class="fighting type">FIGHTING</p>
-                        </div>
-                        <div class="pokemonStats">
-                            <p class="pokemonStat">4m</p>
-                            <p class="pokemonStat">60kg</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="pokemon">
-                    <p class="pokemonIdBack">#025</p>
-                    <div class="pokemonImage">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu">
-                    </div>
-                    <div class="pokemonInfo">
-                        <div class="nameContainer">
-                            <p class="pokemonId">#025</p>
-                            <h2 class="pokemonName">Pikachu</h2>
-                        </div>
-                        <div class="pokemonType">
-                            <p class="electric type">ELECTRIC</p>
-                            <p class="fighting type">FIGHTING</p>
-                        </div>
-                        <div class="pokemonStats">
-                            <p class="pokemonStat">4m</p>
-                            <p class="pokemonStat">60kg</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="pokemon">
-                    <p class="pokemonIdBack">#025</p>
-                    <div class="pokemonImage">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu">
-                    </div>
-                    <div class="pokemonInfo">
-                        <div class="nameContainer">
-                            <p class="pokemonId">#025</p>
-                            <h2 class="pokemonName">Pikachu</h2>
-                        </div>
-                        <div class="pokemonType">
-                            <p class="electric type">ELECTRIC</p>
-                            <p class="fighting type">FIGHTING</p>
-                        </div>
-                        <div class="pokemonStats">
-                            <p class="pokemonStat">4m</p>
-                            <p class="pokemonStat">60kg</p>
-                        </div>
-                    </div>
-                </div>
+                    </div>-->
             </div>
         </div>
-
     </main>
 </body>
 </html>
